--- a/core/templates/core/service_detail.html
+++ b/core/templates/core/service_detail.html
@@ -1,5 +1,5 @@
 {% extends "core/app_base_admin.html" %}
-{% load i18n humanize staticfiles auth_tokens %}
+{% load i18n humanize static auth_tokens %}
 
 {% block page_title %}
 <title>{% trans "Service info" %} - ikwen </title>
@@ -34,52 +34,52 @@
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Application" %}</label>
                         <span>
-                            <span> {{ service.app.name }} </span>
+                            <span> {{ srvce.app.name }} </span>
                         </span>
                     </div>
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Project name" %}</label>
-                        <span>{{ service.project_name }}</span>
+                        <span>{{ srvce.project_name }}</span>
                     </div>
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Online since" %}</label>
-                        <span> {{ service.since }} </span>
+                        <span> {{ srvce.since }} </span>
                     </div>
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "API Signature" %}</label>
-                        <span> {{ service.api_signature }} </span>
+                        <span> {{ srvce.api_signature }} </span>
                     </div>
     {#                <div class="detail">#}
     {#                    <label class="name">{% trans "Admin" %}</label>#}
-    {#                    <span> <a href="{{ service.admin_url }}">Access</a> </span>#}
+    {#                    <span> <a href="{{ srvce.admin_url }}">Access</a> </span>#}
     {#                </div>#}
                 </section>
                 <section id="billing" class="subtle-shade">
                     <header>
                         <h3 style="float: left"> {% trans "Billing" %} </h3>
-                        {% if service.expired %}<span class="label label-danger" style="float: right">{% trans "Expired" %}</span>{% endif %}
-                        {#                    {% url 'billing:invoice_list' service.id as invoice_list_url %}#}
+                        {% if srvce.expired %}<span class="label label-danger" style="float: right">{% trans "Expired" %}</span>{% endif %}
+                        {#                    {% url 'billing:invoice_list' srvce.id as invoice_list_url %}#}
                         {#                    <a href="{{ invoice_list_url|ikwenize|append_auth_tokens:request }}" target="_blank">{% trans "Pay your invoice" %}</a>#}
                         <div class="clear"></div>
                     </header>
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Version" %}</label>
                         <span>
-                            {{ service.version }}
-    {#                        {% if service.version == 'Trial' %}#}
+                            {{ srvce.version }}
+    {#                        {% if srvce.version == 'Trial' %}#}
     {#                            - <a href="{% url 'ikwen:invoice_list' %}"> {% trans 'Activate full version' %} </a>#}
     {#                        {% endif %}#}
                         </span>
                     </div>
-                    {% if service.version != 'Free' %}
+                    {% if srvce.version != 'Free' %}
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Monthly cost" %}</label>
-                        <span>{{ currency_symbol }} {{ service.monthly_cost|intcomma }}</span>
+                        <span>{{ currency_symbol }} {{ srvce.monthly_cost|intcomma }}</span>
                     </div>
                     <div class="detail billing-cycle row">
                         <label class="col-sm-3">{% trans "Billing cycle" %}</label>
                         <span>
-                            {% trans service.billing_cycle %}
+                            {% trans srvce.billing_cycle %}
                             - <a class="action-edit" href="#"> {% trans "Change" %} </a>
                         </span>
                     </div>
@@ -99,29 +99,29 @@
                     </div>
                     <div class="detail row" style="clear: both">
                         <label class="col-sm-3">{% trans "Last payment" %}</label>
-                        {% if service.last_payment %}<span>{{ service.last_payment }}</span>{% else %}<span>N/A</span>{% endif %}
+                        {% if srvce.last_payment %}<span>{{ srvce.last_payment }}</span>{% else %}<span>N/A</span>{% endif %}
                     </div>
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Expiry" %}</label>
-                        {% if service.expiry %}
-                            <span>{{ service.expiry }} <em style="font-size: 11px">({{ service.expiry }})</em></span>
+                        {% if srvce.expiry %}
+                            <span>{{ srvce.expiry }} <em style="font-size: 11px">({{ srvce.expiry }})</em></span>
                         {% else %}
                             <span>N/A</span>
                         {% endif %}
                     </div>
     {#                <div class="detail row">#}
     {#                    <label class="col-sm-3">{% trans "Next invoice" %}</label>#}
-    {#                    {% if service.next_invoice_on %}#}
-    {#                        <span>{{ service.next_invoice_on }} <em style="font-size: 11px">({{ currency_symbol }}{{ service.next_invoice_amount|intcomma }})</em></span>#}
+    {#                    {% if srvce.next_invoice_on %}#}
+    {#                        <span>{{ srvce.next_invoice_on }} <em style="font-size: 11px">({{ currency_symbol }}{{ srvce.next_invoice_amount|intcomma }})</em></span>#}
     {#                    {% else %}#}
     {#                        <span>N/A</span>#}
     {#                    {% endif %}#}
     {#                </div>#}
                     <div class="detail row">
                         <label class="col-sm-3">{% trans "Invoices" %}</label>
-                        {% if service.pending_invoice_count > 0 %}
+                        {% if srvce.pending_invoice_count > 0 %}
                             <span>
-                                <strong>{{ service.pending_invoice_count }} {% trans "Pending" %}</strong>
+                                <strong>{{ srvce.pending_invoice_count }} {% trans "Pending" %}</strong>
                                 {% url 'billing:invoice_list' as invoice_list_url %}
                                 - <a href="{{ invoice_list_url|ikwenize }}" target="_blank"> {% trans 'See' %} </a>
                             </span>
@@ -155,7 +155,7 @@
                 $('body, button, .button').css('cursor', 'wait');
                 {% url 'billing:change_billing_cycle' as change_cycle_url %}
                 $.getJSON('{{ change_cycle_url|ikwenize }}' + '?callback=?',
-                        {new_cycle: value, subscription_id: '{{ service.id }}', key: '{{request.GET.key}}', rand: '{{ request.GET.rand }}' },
+                        {new_cycle: value, subscription_id: '{{ srvce.id }}', key: '{{request.GET.key}}', rand: '{{ request.GET.rand }}' },
                         function(response) {
                     $('body, button, .button').css('cursor', 'default');
                     if (response.error) {
